# research-agent-cli

./: .gitignore  .pypirc.example  LICENSE  README.md  RELEASE.md  Research.md  main.py  memory.md  pyproject.toml  requirements.txt  res.md  research-agent.cmd
.github/workflows/: publish.yml
agent/: __init__.py  __main__.py  cli.py  config.py  desktop_app.py  models.py  pipeline.py  scheduler.py  search.py  storage.py  summarize.py  vault.py
research_agent_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: launch_desktop_app.bat  run_agent.bat  run_agent.ps1  start_terminal_backend.bat  start_terminal_frontend.bat
ui_news_agent/: cli.py  config.py  models.py  pipeline.py  scheduler.py  search.py  summarize.py  utils.py  vault.py
