[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent-cli"
version = "0.1.0"
description = "A simple research agent that searches, summarizes, and writes to an Obsidian vault."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "apscheduler==3.10.4",
  "beautifulsoup4==4.13.4",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.7",
  "ddgs==9.6.1",
  "idna==3.11",
  "ollama==0.6.0",
  "requests==2.33.1",
  "urllib3==2.6.3"
]

[project.scripts]
research-agent = "agent.cli:main"

[tool.setuptools]
packages = ["agent"]
