[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent-cli"
version = "0.1.0"
description = "A simple research agent that searches, summarizes, and writes to an Obsidian vault."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Harish Kushwah", email = "harishkushwah54321@gmail.com" }
]
maintainers = [
  { name = "Harish Kushwah", email = "harishkushwah54321@gmail.com" }
]
keywords = ["research", "agent", "cli", "obsidian", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Utilities"
]
dependencies = [
  "apscheduler==3.10.4",
  "beautifulsoup4==4.13.4",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.7",
  "ddgs==9.6.1",
  "idna==3.11",
  "ollama==0.6.0",
  "requests==2.33.1",
  "urllib3==2.6.3"
]

[project.scripts]
research-agent = "agent.cli:main"

[tool.setuptools]
packages = ["agent"]
