[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent-cli"
version = "0.1.2"
description = "A simple research agent that searches, summarizes, and writes to an Obsidian vault."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Harish Kushwah", email = "harishkushwah54321@gmail.com" }
]
maintainers = [
  { name = "Harish Kushwah", email = "harishkushwah54321@gmail.com" }
]
keywords = ["research", "agent", "cli", "obsidian", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Utilities"
]
dependencies = [
  "apscheduler",
  "beautifulsoup4",
  "certifi",
  "charset-normalizer",
  "ddgs",
  "idna",
  "ollama",
  "requests",
  "urllib3"
]

[project.scripts]
research-agent = "agent.cli:main"

[project.urls]
Homepage = "https://github.com/Harish-Kushwah/research-agent-cli"
Repository = "https://github.com/Harish-Kushwah/research-agent-cli"
Issues = "https://github.com/Harish-Kushwah/research-agent-cli/issues"

[tool.setuptools]
packages = ["agent"]